// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the SearchBar component with headingText matches the snapshot 1`] = `
<div
  className="sc-bwzfXH dNRFDx"
  role="search"
>
  <h2
    className="sc-bxivhb gFAOWL"
  >
    Search the Yoast knowledge base
  </h2>
  <form
    onSubmit={[Function]}
  >
    <label
      className="sc-bdVaJa CLHKE"
      htmlFor="search-input"
    >
      <svg
        aria-hidden="true"
        className="sc-ifAKCX jmVmZf"
      />
      <span
        className="screen-reader-text"
      >
        Search the Yoast knowledge base
      </span>
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-htpNat fxYYiS"
      defaultValue=""
      id="search-input"
      name="search-input"
      onChange={[Function]}
      spellCheck="false"
      type="text"
    />
  </form>
</div>
`;

exports[`the SearchBar component without headingText matches the snapshot 1`] = `
<div
  className="sc-bwzfXH dNRFDx"
  role="search"
>
  <h2
    className="sc-bxivhb gFAOWL"
  >
    Search the Yoast knowledge base
  </h2>
  <form
    onSubmit={[Function]}
  >
    <label
      className="sc-bdVaJa CLHKE"
      htmlFor="search-input"
    >
      <svg
        aria-hidden="true"
        className="sc-EHOje bsqrpZ"
      />
      <span
        className="screen-reader-text"
      >
        Search the Yoast knowledge base
      </span>
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-htpNat fxYYiS"
      defaultValue=""
      id="search-input"
      name="search-input"
      onChange={[Function]}
      spellCheck="false"
      type="text"
    />
  </form>
</div>
`;
